--- a/Makestagram/Storyboards/Base.lproj/Main.storyboard
+++ b/Makestagram/Storyboards/Base.lproj/Main.storyboard
@@ -1,24 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UH4-Ez-pk5">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Item 2-->
+        <scene sceneID="nzd-hE-mPh">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="fb3-vm-D8W" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7vu-TP-DAt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="Rke-lQ-3je"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="8Mk-hF-UXP"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aJm-Hm-dKS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="20" y="282"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Z3m-f4-1RC">
+            <objects>
+                <viewController id="ZBJ-we-Ahe" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="alC-mv-SoC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="H8n-iA-2SZ"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="FBf-Bf-GjC"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iRq-Pa-BJ8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="889" y="-27"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="VG0-Qg-7n8">
+            <objects>
+                <viewController id="2GX-Lt-b6i" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pAW-fe-0bQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="up0-5P-5Rv"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="vEc-h8-HJY"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jip-RB-fGF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="20" y="-383"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="K5P-mj-fCd">
+            <objects>
+                <tabBarController id="UH4-Ez-pk5" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3FK-47-v1m">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="2GX-Lt-b6i" kind="relationship" relationship="viewControllers" id="tts-bL-zCp"/>
+                        <segue destination="fb3-vm-D8W" kind="relationship" relationship="viewControllers" id="ZuP-y5-Jkh"/>
+                        <segue destination="ZBJ-we-Ahe" kind="relationship" relationship="viewControllers" id="7Zr-pS-SiR"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qqs-WI-mZy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-931" y="-50"/>
         </scene>
     </scenes>
 </document>
