--- a/Makestagram/Storyboards/Base.lproj/Main.storyboard
+++ b/Makestagram/Storyboards/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
+        <!--View Controller-->
         <scene sceneID="nzd-hE-mPh">
             <objects>
                 <viewController id="fb3-vm-D8W" sceneMemberID="viewController">
@@ -20,13 +20,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="Rke-lQ-3je"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="8Mk-hF-UXP"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab_plus_black" id="8Mk-hF-UXP">
+                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aJm-Hm-dKS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="20" y="282"/>
         </scene>
-        <!--Item-->
+        <!--View Controller-->
         <scene sceneID="Z3m-f4-1RC">
             <objects>
                 <viewController id="ZBJ-we-Ahe" sceneMemberID="viewController">
@@ -36,13 +38,15 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="H8n-iA-2SZ"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="FBf-Bf-GjC"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab_find_friends_black" id="FBf-Bf-GjC">
+                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iRq-Pa-BJ8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="889" y="-27"/>
         </scene>
-        <!--Item 1-->
+        <!--View Controller-->
         <scene sceneID="VG0-Qg-7n8">
             <objects>
                 <viewController id="2GX-Lt-b6i" sceneMemberID="viewController">
@@ -52,7 +56,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="up0-5P-5Rv"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="vEc-h8-HJY"/>
+                    <tabBarItem key="tabBarItem" title="" image="tab_home_black" id="vEc-h8-HJY">
+                        <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
+                    </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jip-RB-fGF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -78,4 +84,9 @@
             <point key="canvasLocation" x="-931" y="-50"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tab_find_friends_black" width="25" height="25"/>
+        <image name="tab_home_black" width="25" height="25"/>
+        <image name="tab_plus_black" width="25" height="25"/>
+    </resources>
 </document>
