--- a/Makestagram/Storyboards/Base.lproj/Main.storyboard
+++ b/Makestagram/Storyboards/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="Rke-lQ-3je"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="tab_plus_black" id="8Mk-hF-UXP">
+                    <tabBarItem key="tabBarItem" tag="1" title="" image="tab_plus_black" id="8Mk-hF-UXP">
                         <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
                     </tabBarItem>
                 </viewController>
@@ -38,7 +38,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="H8n-iA-2SZ"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="tab_find_friends_black" id="FBf-Bf-GjC">
+                    <tabBarItem key="tabBarItem" tag="2" title="" image="tab_find_friends_black" id="FBf-Bf-GjC">
                         <inset key="imageInsets" minX="0.0" minY="7" maxX="0.0" maxY="-7"/>
                     </tabBarItem>
                 </viewController>
@@ -64,10 +64,10 @@
             </objects>
             <point key="canvasLocation" x="20" y="-383"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Main Tab Bar Controller-->
         <scene sceneID="K5P-mj-fCd">
             <objects>
-                <tabBarController id="UH4-Ez-pk5" sceneMemberID="viewController">
+                <tabBarController id="UH4-Ez-pk5" customClass="MainTabBarController" customModule="Makestagram" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="3FK-47-v1m">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
